[project]
name = "hello-world-oa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.133.0",
    "mangum>=0.21.0",
    "starlette>=0.52.1",
    "sqlalchemy>=2.0.47",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4"
]