[project]
name = "hello-world-oa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.133.0",
    "mangum>=0.21.0",
    "starlette>=0.52.1",
    "sqlalchemy>=2.0.47",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pytest>=9.0.2",
    "ruff>=0.15.3",
    "ty>=0.0.19"
]

[tool.ruff]
exclude = [
    "migrations"
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
combine-as-imports = true

[tool.ty.environment]
root = ["./src"]