[project]
name = "hello-world-oa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.133.0",
    "mangum>=0.21.0",
    "starlette>=0.52.1",
    "sqlalchemy>=2.0.47",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.3",
    "ty>=0.0.19",
]

[tool.ruff]
cache-dir = "output/.ruff_cache"
exclude = [
    "migrations"
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
combine-as-imports = true

[tool.ty.src]
exclude = ["migrations"]

[tool.ty.environment]
root = ["./src"]


[tool.pytest.ini_options]
cache_dir = "output/.pytest_cache"
pythonpath = [".", "src"]
addopts = """
    -vv
    --cov
    --cov-report term
    --cov-report html
    --cov-report xml
"""

[tool.coverage.run]
branch = true
omit = [
    "test_*.py",
    "*conftest.py",
    "*__init__*"
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    'if __name__ == "__main__":',
]

[tool.coverage.html]
directory = "output/reports/htmlcov"

[tool.coverage.xml]
output = "output/reports/coverage.xml"
